--- a/AUTHORITY/extensions.cfg
+++ b/AUTHORITY/extensions.cfg
@@ -13,5 +13,5 @@ CN = Edward Stoever
 [extensions]
 authorityKeyIdentifier=keyid,issuer
 basicConstraints=CA:TRUE
-keyUsage=digitalSignature, nonRepudiation
+keyUsage=digitalSignature, nonRepudiation, cRLSign, keyCertSign
 nsComment="Origin of this certificate is https://github.com/mariadb-edwardstoever/SSL_Maxscale_and_Replication"
