modified:   AUTHORITY/myCA.pem 	modified:   AUTHORITY/recreate_CA_certificate.sh 	modified:   BAK/CA_configuration.cfg 	renamed:    COMMON/create_own_key.sh -> BAK/OLD.create_own_key.sh 	new file:   BAK/OLD.create_own_pem.sh 	renamed:    REDHAT/OWN_extensions.cfg -> BAK/OWN_all-purpose_extensions.cfg 	renamed:    REDHAT/OWN_org_details.cfg -> BAK/OWN_org_details.cfg 	renamed:    COMMON/create_new_CA_key.sh -> BAK/create_new_CA_key.sh 	renamed:    COMMON/create_new_CA_pem.sh -> BAK/create_new_CA_pem.sh 	renamed:    COMMON/use_provided_CA.sh -> BAK/use_provided_CA.sh 	new file:   BAK/vars.sh 	renamed:    REDHAT/CA_configuration.cfg -> COMMON/CA_configuration.cfg 	new file:   COMMON/OWN_all-purpose_extensions.cfg 	new file:   COMMON/OWN_org_details.cfg 	deleted:    COMMON/create_own_pem.sh 	modified:   COMMON/start_over.sh 	new file:   COMMON/step_1.sh 	new file:   COMMON/step_2.sh 	new file:   COMMON/step_3.sh 	new file:   COMMON/step_4.sh 	deleted:    COMMON/validate_CA_pem.sh 	deleted:    COMMON/validate_own_pem.sh 	modified:   COMMON/vars.sh 	new file:   COMMON/view_CA_pem.sh 	new file:   COMMON/view_own_pem.sh 	new file:   DEBIAN/add_CA_to_host_trust_store.sh 	new file:   DEBIAN/functions.sh 	new file:   DEBIAN/test_required_software.sh 	modified:   REDHAT/README.md 	modified:   REDHAT/add_CA_to_host_trust_store.sh 	deleted:    REDHAT/create_new_CA_key.sh 	deleted:    REDHAT/create_new_CA_pem.sh 	deleted:    REDHAT/create_own_key.sh 	deleted:    REDHAT/create_own_pem.sh 	new file:   REDHAT/step_1.sh 	new file:   REDHAT/step_2.sh 	new file:   REDHAT/step_3.sh 	new file:   REDHAT/step_4.sh 	modified:   REDHAT/test_required_software.sh 	deleted:    REDHAT/use_provided_CA.sh 	deleted:    REDHAT/validate_CA_pem.sh         deleted:    REDHAT/validate_own_pem.sh 	deleted:    REDHAT/vars.sh 	new file:   REDHAT/view_CA_pem.sh 	new file:   REDHAT/view_own_pem.sh

--- a/BAK/CA_configuration.cfg
+++ b/BAK/CA_configuration.cfg
@@ -21,4 +21,4 @@ emailAddress = mhernandez@certauthority.net
 [extensions]
 authorityKeyIdentifier=keyid,issuer
 basicConstraints=CA:TRUE
-keyUsage=digitalSignature, nonRepudiation
+keyUsage=digitalSignature, nonRepudiation, cRLSign, keyCertSign
