--- a/COMMON/CA_configuration.cfg
+++ b/COMMON/CA_configuration.cfg
@@ -21,4 +21,4 @@ emailAddress = mhernandez@certauthority.net
 [extensions]
 authorityKeyIdentifier=keyid,issuer
 basicConstraints=CA:TRUE
-keyUsage=digitalSignature, nonRepudiation
+keyUsage=digitalSignature, nonRepudiation, cRLSign, keyCertSign
